syntax = "proto3";

import "google/api/annotations.proto";

package poolrpc;

option go_package = "github.com/lightninglabs/pool/poolrpc";

service Initializer {
    /*
    Tells poold to initialize itself, create a macaroon,
    and connect to LND.

    If InitRequest.stateless_init is true, InitResponse
    will contain raw bytes of poold.macaroon (which won't be saved to disk).
    Otherwise, InitResponse will simply return its success boolean.
    */
    rpc InitializeService (InitializeRequest) returns (InitializeResponse) {
        option (google.api.http) = {
            post: "/v1/pool/service/initialize"
            body: "*"
        };
    }
}

message InitializeRequest {
    /*
    Controls how poold initializes;
    if stateless_init is true, then poold.macaroon won't be saved to disk,
    and will instead be returned in InitResponse.

    Otherwise, poold.macaroon _will_ be saved to disk.
     */
    bool stateless_init = 1;

    LndAuthDetails lnd_auth_details = 2;
}

message InitializeResponse {
    /*
    Represents whether or not poold's initialization sequence succeeded.
    If false, check the output of the `init_error` field.
     */
    bool init_succeeded = 1;

    /*
    Raw byte data of the autogenerated poold.macaroon file.

    If initiated with stateless_init set to false, this field will be empty,
    and poold.macaroon will instead be saved to
    $POOLD_DIR/$NETWORK/poold.macaroon.
     */
    bytes poold_macaroon = 2;

    /*
    If poold initialization failed for some reason, contains the error string
    of the initialization error.
     */
    string init_error = 3;
}

message LndAuthDetails {
    /*
    Host (whether a hostname or IP address) of the LND instance to connect to.

    Must not include the port number.
     */
    string host = 1;

    /*
    RPC port of the LND instance to connect to.

    Defaults to 10009 (LND's default RPC port).
     */
    uint64 port = 2;

    /*
    Base64-encoded data of LND's admin macaroon to authenticate with.
     */
    string admin_macaroon = 3;

    /*
    Base64-encoded data of LND's TLS certificate to authenticate with.
     */
    string tls_cert = 4;
}